Changes for Perl extension DBD-SQLite

1.32_01 to be released
    - Updated to SQLite 3.7.3 (DUNCAND)
    - Resolved #61355: Fails testing in parallel (ISHIGAKI)
    - Resolved #61361: Problems building 1.31 with system SQLite (ISHIGAKI)
    - Resolved #61117: Supporting database as an alias for dbname in
      DSN (ISHIGAKI)
    - Resolved #62370: Segfaults during operations on disconnected
      handles (ISHIGAKI)
    - Resolved #61958: REGEXP should return NULL when one of its
      arguments is NULL (ISHIGAKI)
    - Removed PrintWarn tweak introduced in 1.19_09 (Tim Bunce's
      advice) (ISHIGAKI)

1.31 Wed 15 Sep 2010
    - Production release, identical to 1.30_06

1.30_06 Thu  9 Sep 2010
    - Resolved # 60860: Slow but steady memory leak on
      last_insert_id calls (ISHIGAKI)
    - Moved DBD::SQLite::FTS3Transitional into a dedicated dist (DAMI)
    - Updated bundled Test::NoWarnings to 1.02 (ADAMK)
    - Slightly bumped Test::More and added Test::Builder dependencies,
      because they are inherited from the bundled Test::NoWarnings (ADAMK)
    - Upgraded ppport.h to the latest version (ADAMK)

1.30_05 Fri 27 Aug 2010
    - Test::NoWarnings bundled in the "inc" directory was ignored
      in a new test. (ISHIGAKI)

1.30_04 Wed 25 Aug 2010
    - Updated to SQLite 3.7.2 (DUNCAND)
    - Resolved #60698: "Test failures with SQLite 3.7", using included
      patch by Niko Tyni (ntyni@debian.org) of t/lib/Test.pm (DUNCAND)
    - Added support for FTS3 tokenizers written in Perl. Added tests
      and documentation on how to use FTS3. Changed compilation flag
      to use the recommanded -DSQLITE_ENABLE_FTS3_PARENTHESIS
      *** MAY POSSIBLY BREAK OLD APPLICATIONS THAT ALREADY USED FTS3 ***
      (DAMI)
    - Fixed various backward compatibility issues back to SQLite 3.6.1
      (ISHIGAKI)
    - Resolved #58332: Documentation error for preventing fsync
      (ISHIGAKI)

1.30_03 Mon 21 May 2010
    - Updated to SQLite 3.6.23.1 (ISHIGAKI)